Refactor gameplay and rendering logic: - Update GamePlay class to improve variable types for coordinates and opacity, enhancing precision and readability. - Introduce new animation processing methods to streamline visual effects during gameplay. - Modify RenderGamePlay to remove redundant opacity calculations, optimizing rendering performance. - Update DisplayModes to simplify mode representation and remove unnecessary refresh rate handling. - Enhance Accumulator class with configurable catch-up ticks for improved time management. - Add documentation updates for clarity on gameplay mechanics and display options.